@@ -686,7 +686,7 @@ do_wall(dbref player, const char *message, enum wall_type target, int emit)
  * \param player The victim to call it on.
  * \param attribute The attribute on the player to call.
  * \param enactor The enactor who caused the message.
- * \param flags NA_INTER_HEAR and NA_SPOOF
+ * \param flags NA_* flags to send in addition to NA_INTER_HEAR and NA_SPOOF
  * \param numargs the number of arguments to the attribute
  * \param ... the arguments to the attribute
  * \retval 1 The player had the fooformat attribute.
@@ -723,7 +723,7 @@ vmessageformat(dbref player, const char *attribute, dbref enactor, int flags,
  * \param player The victim to call it on.
  * \param attribute The attribute on the player to call.
  * \param enactor The enactor who caused the message.
- * \param flags NA_INTER_HEAR and NA_SPOOF
+ * \param flags flags NA_* flags to send in addition to NA_INTER_HEAR and NA_SPOOF
  * \param numargs number of arguments in argv
  * \param argv array of arguments
  * \retval 1 The player had the fooformat attribute.
@@ -739,6 +739,8 @@ messageformat(dbref player, const char *attribute, dbref enactor, int flags,
   PE_REGS *pe_regs;
   int i;
   int ret;
+
+  flags |= NA_INTER_HEAR | NA_SPOOF;
 
   *messbuff = '\0';
   pe_regs = pe_regs_create(PE_REGS_ARG, "messageformat");
